--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "@go-task/go-npm",
-  "version": "0.1.17",
+  "name": "npm-go-bin",
+  "version": "0.0.1",
   "description": "Distribute and install Go binaries via NPM",
-  "main": "index.js",
-  "bin": {
-    "go-npm": "./bin/index.js"
-  },
+  "main": "./src/index.ts",
+  "bin": "./bin/index.js",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf ./bin && esbuild --bundle src/index.js --outfile=\"./bin/index.js\" --platform=node --target=es6 --minify-whitespace",
+    "build": "rm -rf ./bin && esbuild --bundle src/index.ts --outfile=\"./bin/index.js\" --platform=node --minify-whitespace",
     "prepublishOnly": "npm i && npm run build"
   },
-  "author": "Andrey Nering",
+  "author": "Yauheni Abramovich",
+  "packageManager": "yarn@3.5.0",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/go-task/go-npm.git"
+    "url": "https://github.com/evg4b/npm-go-bin.git"
   },
-  "homepage": "https://github.com/go-task/go-npm",
+  "homepage": "https://github.com/evg4b/npm-go-bin",
   "devDependencies": {
-    "esbuild": "^0.12.17",
-    "jest": "^24.5.0",
-    "mkdirp": "^1.0.4",
+    "@types/lodash": "^4.14.194",
+    "esbuild": "^0.17.17",
+    "find-npm-prefix": "^1.0.2",
+    "jest": "^29.5.0",
+    "lodash": "^4.17.21",
+    "mkdirp": "^3.0.0",
     "request": "^2.88.2",
-    "tar": "^2.2.2",
-    "unzipper": "0.10.10",
-    "used-pm": "^1.0.0"
+    "tar": "^6.1.13",
+    "unzipper": "0.10.11"
+  },
+  "installConfig": {
+    "pnp": true
   }
 }
