--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "jest",
     "build": "rm -rf ./bin && esbuild --bundle src/index.ts --outfile=\"./bin/index.js\" --platform=node --minify-whitespace",
+    "dev": "rm -rf ./bin && esbuild --watch --bundle src/index.ts --outfile=\"./bin/index.js\" --sourcemap --platform=node --metafile=meta.json",
     "prepublishOnly": "npm i && npm run build"
   },
   "author": "Yauheni Abramovich",
@@ -18,17 +19,27 @@
   },
   "homepage": "https://github.com/evg4b/npm-go-bin",
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.194",
+    "@types/node-fetch": "^2.6.3",
+    "@types/tar": "^6.1.4",
+    "@types/unzipper": "^0.10.5",
     "esbuild": "^0.17.17",
+    "esbuild-jest": "^0.5.0",
     "find-npm-prefix": "^1.0.2",
     "jest": "^29.5.0",
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.0",
-    "request": "^2.88.2",
+    "node-fetch": "^3.3.1",
     "tar": "^6.1.13",
-    "unzipper": "0.10.11"
+    "unzipper": "^0.10.11"
   },
   "installConfig": {
     "pnp": true
+  },
+  "go-bin": {
+    "name": "uncors",
+    "path": "./bin",
+    "url": "https://github.com/evg4b/uncors/releases/download/v{{version}}/uncors_{{version}}_{{platform}}_{{arch}}.tar.gz"
   }
 }
