--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,18 +3,18 @@
     "baseUrl": "./",
     "module": "es2020",
     "target": "ES2022",
-    "moduleResolution": "Node16",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "typeRoots": [
       "node_modules/@types",
       "./src/types.d.ts"
     ],
-    "lib": [
-      "es2019",
-      "dom"
-    ],
+    "lib": ["es2019"],
     "sourceMap": true
   },
+  "include": ["src/**/*.ts"],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "src/**/*.spec.ts"
   ]
 }
