--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "@types/node-fetch": "^2.6.3",
     "@types/tar": "^6.1.4",
     "@types/unzipper": "^0.10.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "esbuild": "^0.17.17",
     "esbuild-jest": "^0.5.0",
+    "eslint": "^8.38.0",
     "find-npm-prefix": "^1.0.2",
     "jest": "^29.5.0",
     "lodash": "^4.17.21",
-    "mkdirp": "^3.0.0",
     "node-fetch": "^3.3.1",
     "tar": "^6.1.13",
+    "typescript": "^5.0.4",
     "unzipper": "^0.10.11"
-  },
-  "installConfig": {
-    "pnp": true
   },
   "go-bin": {
     "name": "uncors",
