--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "bin": "./bin/cli.js",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf ./bin && esbuild --bundle src/cli.ts --outfile=\"./bin/cli.js\" --platform=node --minify-whitespace",
-    "dev": "rm -rf ./bin && esbuild --watch --bundle src/cli.ts --outfile=\"./bin/cli.js\" --sourcemap --platform=node --metafile=meta.json",
-    "prepublishOnly": "npm i && npm run build",
+    "build": "rm -rf ./bin && esbuild --bundle src/cli.ts --outfile=./bin/cli.js --platform=node --minify-whitespace",
+    "dev": "rm -rf ./bin && esbuild --watch --bundle src/cli.ts --outfile=./bin/cli.js --sourcemap --platform=node",
+    "profile": "rm -rf ./bin && esbuild --bundle src/cli.ts --outfile=./bin/cli.js --sourcemap --platform=node --metafile=meta.json",
     "lint": "eslint ."
   },
   "author": "Yauheni Abramovich",
@@ -20,29 +20,23 @@
   },
   "homepage": "https://github.com/evg4b/npm-go-bin",
   "devDependencies": {
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^29.5.1",
     "@types/lodash": "^4.14.194",
     "@types/node-fetch": "^2.6.3",
     "@types/tar": "^6.1.4",
     "@types/unzipper": "^0.10.5",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
-    "esbuild": "^0.17.17",
+    "esbuild": "^0.17.18",
     "esbuild-jest": "^0.5.0",
-    "eslint": "^8.38.0",
+    "eslint": "^8.39.0",
     "find-npm-prefix": "^1.0.2",
     "jest": "^29.5.0",
     "lodash": "^4.17.21",
     "node-fetch": "^3.3.1",
     "tar": "^6.1.13",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4",
     "unzipper": "^0.10.11"
-  },
-  "go-bin": {
-    "name": "uncors",
-    "url": "https://github.com/evg4b/uncors/releases/download/v{{version}}/uncors_{{version}}_{{platform}}_{{arch}}.tar.gz"
-  },
-  "dependencies": {
-    "ts-jest": "^29.1.0"
   }
 }
