--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,15 @@
     "module": "es2020",
     "target": "ES2022",
     "moduleResolution": "node",
+    "importHelpers": true,
+    "alwaysStrict": true,
+    "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
     "typeRoots": [
       "node_modules/@types",
       "./src/types.d.ts"
     ],
-    "lib": ["es2019"],
+    "lib": ["es2020"],
     "sourceMap": true
   },
   "include": ["src/**/*.ts"],
