--- a/package.json
+++ b/package.json
@@ -26,18 +26,22 @@
     "@types/node-fetch": "^2.6.3",
     "@types/tar": "^6.1.4",
     "@types/unzipper": "^0.10.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "esbuild": "^0.17.18",
     "esbuild-jest": "^0.5.0",
-    "eslint": "^8.39.0",
+    "eslint": "^8.51.0",
     "find-npm-prefix": "^1.0.2",
     "jest": "^29.5.0",
     "lodash": "^4.17.21",
     "node-fetch": "^3.3.1",
     "tar": "^6.1.13",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4",
+    "typescript": "^5.2.2",
     "unzipper": "^0.10.11"
+  },
+  "go-bin": {
+    "name": "uncors",
+    "url": "https://github.com/evg4b/uncors/releases/download/v{{version}}/uncors_{{version}}_{{platform}}_{{arch}}.tar.gz"
   }
 }
