--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -11,8 +11,7 @@
       "./src/types.d.ts"
     ],
     "lib": [
-      "es2019",
-      "jest"
+      "esNext"
     ],
     "sourceMap": true
   },
