--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "tar": "^6.1.13",
     "ts-jest": "^29.1.0",
     "typescript": "^5.2.2",
-    "unzipper": "^0.10.11"
+    "unzipper-lite": "^0.1.0"
   },
   "go-bin": {
     "name": "uncors",
