--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "es2020",
     "target": "ES2022",
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "importHelpers": true,
     "alwaysStrict": true,
     "noImplicitAny": true,
