--- a/package.json
+++ b/package.json
@@ -2,6 +2,18 @@
   "name": "npm-go-bin",
   "version": "0.0.1",
   "description": "Distribute and install Go binaries via NPM",
+  "keywords": [
+    "go",
+    "golang",
+    "npm",
+    "binaries",
+    "cli",
+    "cli-tools",
+    "cli-utility"
+  ],
+  "bugs": {
+    "url": "https://github.com/evg4b/npm-go-bin/issues"
+  },
   "main": "./src/cli.ts",
   "bin": "./bin/cli.js",
   "scripts": {
@@ -16,32 +28,35 @@
     "name": "Yauheni Abramovich",
     "email": "evg.abramovitch@gmail.com"
   },
-  "packageManager": "yarn@3.5.0",
-  "license": "Apache-2.0",
+  "packageManager": "yarn@4.0.2",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/evg4b/npm-go-bin.git"
   },
   "homepage": "https://github.com/evg4b/npm-go-bin",
   "devDependencies": {
-    "@types/jest": "^29.5.1",
-    "@types/lodash": "^4.14.194",
-    "@types/node-fetch": "^2.6.3",
-    "@types/tar": "^6.1.4",
-    "@types/unzipper": "^0.10.5",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
-    "esbuild": "^0.17.18",
+    "@types/jest": "^29.5.10",
+    "@types/lodash": "^4.14.202",
+    "@types/node-fetch": "^2.6.9",
+    "@types/tar": "^6.1.10",
+    "@types/unzipper": "^0.10.9",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "esbuild": "^0.17.19",
     "esbuild-jest": "^0.5.0",
-    "eslint": "^8.51.0",
+    "eslint": "^8.55.0",
     "find-npm-prefix": "^1.0.2",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "lodash": "^4.17.21",
-    "node-fetch": "^3.3.1",
-    "tar": "^6.1.13",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.2.2",
+    "node-fetch": "^3.3.2",
+    "tar": "^6.2.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.2",
     "unzipper-lite": "^0.1.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "go-bin": {
     "name": "uncors",
